develop/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcheque-shoppify-gateway
  namespace: webcheque
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 25%
  selector:
    matchLabels:
      app: webcheque-shopify-gateway-develop
  template:
    metadata:
      labels:
        app: webcheque-shopify-gateway-develop
    spec:
      containers:
        - name: webcheque-shopify-gateway-develop
          image: ghcr.io/talentech-consulting/webcheque-shopify-gateway:develop-6e4a1d1
          ports:
            - containerPort: 3000
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "250Mi"
            limits:
              memory: "300Mi"
      imagePullSecrets:
        - name: ghcr-login-secret
